package Models;

//This code has been modified from previous assignment CDIO 3 by Maj Kyllesbech, Gabriel H, Kierkegaard, Mark Bidstrup & Xiao Chen handed in 29. October 2021

public abstract class ChanceCard {


    public abstract String returnChanceCardText();

    public abstract void effect(Player currentplayerobject);

}
