@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

class Game.MonopolyGame {

}

class Game.Player {
    name
}

class Game.Board {

}

class Game.Field {
    name
}

class Game.Account {
    balance
}

class Game.Die {
    face value
}

class Game.ChanceCard {
    text
}

class StartField {

}

class Game.AmusementField {
    owner
    price
}

class Game.ChanceField {

}

class Game.Jail {

}

class FreeParking {

}

class VisitJail {

}

Game.MonopolyGame "1" *-- "1" Game.Board
Game.MonopolyGame "1" *-- "1" Game.Die
Game.MonopolyGame "1" *-- "2..4" Game.Player
Game.Player "1" *-- "1" Game.Account
Game.Board "1" *-- "24" Game.Field
Game.Field <|--- StartField
Game.Field <|--- Game.AmusementField
Game.Field <|--- Game.ChanceField
Game.Field <|--- Game.Jail
Game.Field <|--- FreeParking
Game.Field <|--- VisitJail
Game.ChanceCard - Game.ChanceField


@enduml